(executable
  (package replayer)
  (name replayer)
  (public_name replayer)
  (libraries
    async_kernel
    core
    caqti
    caqti-async
    caqti-driver-postgresql
    coda_base
    coda_state
    genesis_constants
    yojson
  )
  (preprocessor_deps ../../config.mlh)
  (preprocess (pps ppx_coda ppx_version ppx_let ppx_deriving_yojson)))
